fix overflow

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -43,6 +43,7 @@
 		-webkit-font-smoothing: antialiased;
 		-webkit-text-size-adjust: 100%;
 		   -ms-text-size-adjust: 100%;
+		overflow: hidden;
 	}
 
 	a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, caption, canvas, center, cite, code,
